add hands on 3 file

--- a/hands-on-3/style.css
+++ b/hands-on-3/style.css
@@ -1,3 +1,391 @@
 * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  color: #000;
+  font-weight: 700;
+  font-size: 62px;
+}
+h2 {
+  color: #000;
+  font-weight: 600;
+  font-size: 50px;
+}
+h3 {
+  color: #000;
+  font-weight: 600;
+  font-size: 40px;
+}
+h4 {
+  color: #000;
+  font-weight: 600;
+  font-size: 32px;
+}
+h5 {
+  color: #000;
+  font-weight: 600;
+  font-size: 28px;
+}
+h6 {
+  color: #000;
+  font-weight: 600;
+  font-size: 22px;
+}
+.btn {
+  font-size: 16px;
+  letter-spacing: 1.25px;
+  font-weight: 700;
+
+  color: #000;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+}
+.primary-btn {
+  background-color: #76b900;
+  padding: 16px 12px;
+}
+.second-btn {
+  background: none;
+  gap: 4px;
+}
+
+.btn-icon {
+  font-size: 14px;
+  margin-left: 2px;
+  transition: all 0.25s ease;
+}
+
+.second-btn:hover > .btn-icon {
+  transform: translateX(8px);
+  color: #76b900;
+}
+
+.container {
+  width: 1290px;
+  margin: 0 auto;
+}
+
+.grid-4-cols {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+/**************** HEADER ****************/
+.navbar {
+  /* position: fixed; */
+}
+.container-nav {
+  width: 1320px;
+}
+.nav-first {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 12px 0;
+}
+.nav-left {
+  display: flex;
+  gap: 40px;
+}
+
+.logo {
+  display: flex;
+  gap: 4px;
+}
+.logo-img {
+  height: 36px;
+  width: 36px;
+}
+.logo-text {
+  font-size: 22px;
+  text-decoration: none;
+  color: #000;
+  font-weight: 700;
+
+  display: flex;
+  align-items: center;
+}
+
+.nav-right {
+  display: flex;
+  gap: 60px;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.menu a {
+  text-decoration: none;
+  color: #666;
+  transition: all 0.25s ease;
+}
+
+.menu a:hover {
+  color: #000;
+}
+
+.menu-right {
+  font-size: 14px;
+}
+
+.icon-nav {
+  display: flex;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.icon-nav img {
+  width: 24px;
+  /* stroke: #76b900; */
+}
+
+.icon-nav {
+  stroke: #76b900;
+}
+
+.nav-second {
+  background-color: #080808;
+}
+
+.nav-second-text {
+  color: #fff;
+  font-weight: 400;
+  font-size: 20px;
+  padding: 20px 0;
+}
+
+.grid-2-cols {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+/**************** HERO SECTION ****************/
+
+.hero {
+  /* background-color: #000; */
+  background-image: url(img/hero-img4.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.hero-title {
+  padding: 64px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.hero-title > h5,
+h1 {
+  color: #fff;
+}
+
+.btn-hero {
+  align-self: flex-start;
+  border-radius: 6px;
+}
+
+/**************** PRODUCT SECTION ****************/
+
+.main-section {
+  padding: 64px 0 48px 0;
+  background-color: #eee;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+}
+.product-heading {
+  color: #21252a;
+}
+.product-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 36px;
+  margin-bottom: 54px;
+}
+.card-grid {
+  gap: 36px;
+}
+.card-con {
+  /* overflow: hidden; */
+  background-color: #fff;
+  position: relative;
+  box-shadow: 0 5px 5px 2px rgba(0, 0, 0, 0.12);
+  /* border-radius: 11px; */
+  overflow: hidden;
+  transition: all 0.4s;
+}
+
+.card-con:hover {
+  /* transform: translateZ(8px); */
+  /* transform: scale(1.01); */
+  box-shadow: 0 5px 10px 7px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.card-con img {
+  width: 100%;
+}
+.card-content {
+  text-align: center;
+  padding: 24px 22px 0px 22px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.card-heading {
+  margin-bottom: 60px;
+  font-weight: 700;
+  font-size: 20px;
+}
+.product-btn {
+  align-self: center;
+  position: absolute;
+  bottom: 16px;
+}
+
+/**************** HERO BOTTOM SECTION ****************/
+.hero-bottom-section {
+  box-shadow: 15px 0 5px 2px rgba(0, 0, 0, 0.1);
+  /* margin-bottom: 28px; */
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 1%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
+
+.hero-bottom {
+  width: 1650px;
+  margin: 0 auto;
+}
+.hero-bottom-img-con {
+  background-image: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 1) 1%,
+      rgba(221, 236, 240, 0) 20%
+    ),
+    url(img/hero-bottom-img1.png);
+  /* background-position: center; */
+  background-size: cover;
+}
+
+.hero-bottom-text-con {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding: 48px 30px 48px 32px;
+}
+
+.hero-bottom-title {
+  color: #76b900;
+}
+
+.hero-bottom-description {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.btn-hero-bottm {
+  padding: 18px 12px;
+  font-size: 18px;
+  border-radius: 0;
+}
+
+/**************** Nav bottom SECTION ****************/
+
+.nav-bottom {
+  background-color: #eee;
+  padding: 36px 0 48px 0;
+}
+
+.nav-bottom-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.nav-list a {
+  text-decoration: underline solid #76b900 12%;
+  text-underline-offset: 5px;
+  color: #000;
+  font-weight: 400;
+  transition: all 0.25s ease;
+}
+.nav-bottom-list hr {
+  border: none;
+  width: 1.5px;
+  height: 15px;
+  margin: auto 0;
+  background-color: #747373;
+}
+
+.nav-list a:hover {
+  text-decoration: underline solid #333 12%;
+  text-underline-offset: 5px;
+}
+
+/**************** FOOTER SECTION ****************/
+.footer-con {
+  padding: 28px 0;
+}
+.logo-footer {
+  margin-bottom: 24px;
+}
+.logo-footer-img {
+  filter: grayscale(100%);
+}
+.footer-nav-list {
+  list-style: none;
+  display: flex;
+  gap: 12px;
+}
+
+.footer-nav-list a {
+  text-decoration: none;
+  color: #666;
+  font-size: 16px;
+}
+
+.footer-nav-list hr {
+  background-color: #d4d2d2;
+  border: none;
+  width: 1.5px;
+  height: 13px;
+  margin: auto 0;
+}
+.copyright {
+  margin-top: 10px;
+}
+.copyright-text {
+  font-size: 12px;
+  color: #666;
+}
+
+.footer-right {
+  text-align: end;
+}
+.location a {
+  text-decoration: none;
+  color: #ccc;
+  font-size: 18px;
+  font-weight: 500;
 }
