--- a/hands-on-4/style.css
+++ b/hands-on-4/style.css
@@ -409,3 +409,113 @@ h1 {
   font-size: 18px;
   font-weight: 500;
 }
+
+/**************** Responsive SECTION ****************/
+
+@media (max-width: 1080px) {
+  .container {
+    padding: 0 36px;
+  }
+
+  /* NAVBAR TOP */
+  .menu {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 12px;
+  }
+  .menu-right {
+    font-size: 10px;
+  }
+
+  /* HERO TOP */
+  .hero-title h1 {
+    font-size: 40px;
+  }
+
+  .hero-title h5 {
+    font-size: 20px;
+  }
+
+  /* PRODUCT */
+  .card-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 48px;
+  }
+  .product-heading {
+    font-size: 32px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.5;
+  }
+  .hero-bottom-title {
+    font-size: 32px;
+  }
+  .hero-bottom-description {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 748px) {
+  .container {
+    padding: 0 36px;
+  }
+
+  /* NAVBAR TOP */
+  .menu {
+    display: none;
+  }
+  .icon-nav {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+  }
+
+  /* PRODUCT */
+  .card-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 0 48px;
+  }
+  .product-heading {
+    font-size: 28px;
+    margin: 0 48px;
+    align-items: center;
+  }
+
+  /* NAVBAR BOTTOM */
+  .nav-bottom-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+  .nav-bottom-list hr {
+    display: none;
+  }
+
+  /* HERO BOTTOM */
+  .hero-bottom-title {
+    font-size: 28px;
+  }
+  .hero-bottom-description {
+    font-size: 20px;
+  }
+
+  /* FOOTER */
+  .footer-con {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 24px;
+  }
+  .footer-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-right {
+    text-align: center;
+  }
+}
