--- a/hands-on-2/style.css
+++ b/hands-on-2/style.css
@@ -1,3 +1,9 @@
+h3,
+h4,
+p,
+ul {
+  margin: 0;
+}
 body {
   background-color: #fff;
   margin: 0;
@@ -36,7 +42,8 @@ main {
   margin: 0 auto;
 }
 
-.sub-title {
+.sub-header {
+  margin-top: 32px;
   background-color: #6d6d7a;
   color: #fff;
   font-size: 18px;
@@ -48,10 +55,21 @@ h2 {
   font-size: 32px;
 }
 
+.title {
+  margin-bottom: 12px;
+}
+
 .card {
   background-color: #fbfbfb;
   border-radius: 10px;
   padding: 10px;
   margin: 24px 0;
   border: 1px solid #e9e9ec;
+}
+
+footer {
+  background-color: #2d2b47;
+  color: #e9e9ec;
+  text-align: center;
+  padding: 16px 0;
 }
